2011-05-26  Keishi Hattori  <keishi@webkit.org>

        Reviewed by Kent Tamura.

        Add <input type=color> appearance.
        https://bugs.webkit.org/show_bug.cgi?id=61275

        Test: fast/forms/color/input-appearance-color.html

        * css/html.css:
        (input[type="color"]): Adds square-button appearance.
        (input[type="color"]::-webkit-color-swatch-wrapper):
        (input[type="color"]::-webkit-color-swatch):
        (input[type="color"][list]): Adds menulist appearance.
        (input[type="color"][list]::-webkit-color-swatch-wrapper):
        (input[type="color"][list]::-webkit-color-swatch):
        * html/ColorInputType.cpp:
        (WebCore::ColorInputType::createShadowSubtree): Creates -webkit-color-swatch inside -webkit-color-swatch-wrapper.
        (WebCore::ColorInputType::updateColorSwatch): Updates background color of shadowColorSwatch.
        (WebCore::ColorInputType::valueChanged): Calls updateColorSwatch.
        (WebCore::ColorInputType::shadowColorSwatch): Gets shadowColorSwatch element.
        * html/ColorInputType.h:
        (WebCore::ColorInputType::ColorInputType): Changed to inherit InputType.

2011-05-26  Kent Tamura  <tkent@chromium.org>

        Reviewed by Dimitri Glazkov.

        Fix a bug that <input type="number"> dispatches two blurs when tabbing
        from an invalid number
        https://bugs.webkit.org/show_bug.cgi?id=59071

        NumberInputType::handleBlurEvent() dispatched an extra focus event
        and an extra blur event because
        SelectionController::textWillBeReplaced() called by
        RenderTextControlSingleLine::updateFromElement() focuses a node
        with the selection.

        In order to avoid this problem,
         - Introduce Node::willBlur()
           It is called before any state changes by a blur event.
         - Call RenderTextControlSingleLine::updateFromElement() in willBlur()
           It avoids extra focus/blur events because Document::m_focusedNode is